# Django-REST-framework

./: .gitignore
Day1/: api.http  pyproject.toml  schema.yml
Day1/api/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
Day1/api/migrations/: 0001_initial.py  0002_alter_orderitem_order.py
Day1/drf_prac/: asgi.py  settings.py  urls.py  wsgi.py
